<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ConfigureEvent_ShowHideLayer</class>
 <widget class="QDialog" name="ConfigureEvent_ShowHideLayer">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>376</width>
    <height>148</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Show/Hide Layer</string>
  </property>
  <property name="windowIcon">
   <iconset resource="gui_icons.qrc">
    <normaloff>:/icons/openrpgmaker.png</normaloff>:/icons/openrpgmaker.png</iconset>
  </property>
  <property name="styleSheet">
   <string notr="true">.QFrame
{
	border-width: 1px;
	border-style: solid;
	border-color: palette(window-text);
}

.QFrame&gt;QLabel
{
	border-width: 0px;
	background-color: palette(window-text);
	color: palette(window);
	font-weight: bold;
}

.QFrame&gt;QCheckBox
{
	background-color: palette(window-text);
	border-width: 0px;
	border-style: none;
	color: palette(window);
	spacing: 3px;
	font-weight: bold;
	padding: 0px 0px 0px 3px;
}

.QFrame&gt;QCheckBox::indicator
{
	min-width: 8px;
	max-width: 8px;
	min-height: 8px;
	max-height: 8px;
	width: 8px;
	height: 8px;
	border-width: 2px;
	border-radius: 0px;
	border-style: ridge;
	border-color: palette(mid);
}

.QFrame&gt;QCheckBox::indicator:unchecked
{
	background-color: palette(base);
}

.QFrame&gt;QCheckBox::indicator:checked
{
	background-color: palette(window-text);
}

.QFrame&gt;QCheckBox::indicator:hover
{
	border-color: palette(highlight);
}</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_3">
   <property name="spacing">
    <number>3</number>
   </property>
   <property name="margin">
    <number>3</number>
   </property>
   <item>
    <widget class="QFrame" name="frame">
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <property name="spacing">
       <number>0</number>
      </property>
      <property name="margin">
       <number>0</number>
      </property>
      <item>
       <widget class="QLabel" name="label">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="text">
         <string>Layer</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QWidget" name="widget" native="true">
        <layout class="QHBoxLayout" name="horizontalLayout">
         <property name="spacing">
          <number>3</number>
         </property>
         <property name="margin">
          <number>3</number>
         </property>
         <item>
          <widget class="QWidget" name="widget_6" native="true">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_5">
            <property name="spacing">
             <number>3</number>
            </property>
            <property name="margin">
             <number>0</number>
            </property>
            <item>
             <widget class="QRadioButton" name="rbSpecificLayer">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
              <property name="text">
               <string>Specific Layer:</string>
              </property>
              <property name="checked">
               <bool>true</bool>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QRadioButton" name="rbReferencedLayer">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
              <property name="text">
               <string>Layer Referenced in Variable:</string>
              </property>
             </widget>
            </item>
           </layout>
          </widget>
         </item>
         <item>
          <widget class="QWidget" name="widget_7" native="true">
           <layout class="QVBoxLayout" name="verticalLayout_6">
            <property name="spacing">
             <number>3</number>
            </property>
            <property name="margin">
             <number>0</number>
            </property>
            <item>
             <widget class="QComboBox" name="cboxLayers"/>
            </item>
            <item>
             <widget class="QWidget" name="wLayerVariable" native="true">
              <layout class="QHBoxLayout" name="horizontalLayout_42">
               <property name="spacing">
                <number>0</number>
               </property>
               <property name="margin">
                <number>0</number>
               </property>
               <item>
                <widget class="QLabel" name="lblLayerVariable">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                   <horstretch>0</horstretch>
                   <verstretch>0</verstretch>
                  </sizepolicy>
                 </property>
                 <property name="minimumSize">
                  <size>
                   <width>150</width>
                   <height>0</height>
                  </size>
                 </property>
                 <property name="font">
                  <font>
                   <family>Monospace</family>
                  </font>
                 </property>
                 <property name="styleSheet">
                  <string notr="true">background-color: palette(base);</string>
                 </property>
                 <property name="frameShape">
                  <enum>QFrame::Panel</enum>
                 </property>
                 <property name="frameShadow">
                  <enum>QFrame::Sunken</enum>
                 </property>
                 <property name="lineWidth">
                  <number>2</number>
                 </property>
                 <property name="text">
                  <string/>
                 </property>
                </widget>
               </item>
               <item>
                <widget class="QToolButton" name="bBrowseLayerVariables">
                 <property name="text">
                  <string>...</string>
                 </property>
                 <property name="icon">
                  <iconset resource="gui_icons.qrc">
                   <normaloff>:/icons/fileopen.png</normaloff>:/icons/fileopen.png</iconset>
                 </property>
                </widget>
               </item>
              </layout>
             </widget>
            </item>
           </layout>
          </widget>
         </item>
        </layout>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QFrame" name="frame_2">
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <property name="spacing">
       <number>0</number>
      </property>
      <property name="margin">
       <number>0</number>
      </property>
      <item>
       <widget class="QLabel" name="label_2">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="text">
         <string>Transition</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QWidget" name="widget_2" native="true">
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <property name="spacing">
          <number>0</number>
         </property>
         <property name="margin">
          <number>0</number>
         </property>
         <item>
          <widget class="QComboBox" name="cboxEraseTransitions">
           <item>
            <property name="text">
             <string>Fade Out</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Remove Blocks</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Wipe Downward</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Wipe Upward</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Venetian Blinds</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Vertical Blinds</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Horizontal Blinds</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Receding Square</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Expanding Square</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Screen Moves Up</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Screen Moves Down</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Screen Moves Left</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Screen Moves Right</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Vertical Division</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Horizontal Division</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Quadrasection</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Zoom In</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Mosaic</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Waver Screen</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Instantaneous</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>No Transition</string>
            </property>
           </item>
          </widget>
         </item>
         <item>
          <widget class="QComboBox" name="cboxShowTransitions">
           <item>
            <property name="text">
             <string>Fade In</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Reconstitute Blocks</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Unwipe Downward</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Unwipe Upward</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Venetian Blinds</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Vertical Blinds</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Horizontal Blinds</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Receding Square</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Expanding Square</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Screen Moves Down</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Screen Moves Up</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Screen Moves Right</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Screen Moves Left</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Vertical Unify</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Horizontal Unify</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Unify Quadrants</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Zoom Out</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Mosaic</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Waver Screen</string>
            </property>
           </item>
           <item>
            <property name="text">
             <string>Instantaneous</string>
            </property>
           </item>
          </widget>
         </item>
        </layout>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Help|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="gui_icons.qrc"/>
 </resources>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>ConfigureEvent_ShowHideLayer</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>ConfigureEvent_ShowHideLayer</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
